Started making react app again. Fixed tons of bugs on Django side and added astraglobal as an allowed host

--- a/astra-frontend/src/css/index.css
+++ b/astra-frontend/src/css/index.css
@@ -1,4 +1,4 @@
 body {
     background-image: url(../images/background.png);
-    font-family: "Shree Devanagari 714", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
