--- a/astra-frontend/src/css/Button.css
+++ b/astra-frontend/src/css/Button.css
@@ -13,7 +13,7 @@
     text-decoration: none;
     border: none;
     font-size: 18px;
-    font-family: "Shree Devanagari 714", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
+    font-family: 'Gothic A1', sans-serif;
 }
 
 .small-button {
@@ -22,7 +22,7 @@
     text-decoration: none;
     border: none;
     font-size: 0.8em;
-    font-family: "Shree Devanagari 714", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
+    font-family: 'Gothic A1', sans-serif;
 }
 
 .gradient-button {
