--- a/astra-frontend/src/css/LoginForm.css
+++ b/astra-frontend/src/css/LoginForm.css
@@ -1,33 +1,24 @@
-.login-form {
-    padding-top: 500px;
-    margin: 50px;
-    min-height: 320px;
-    min-width: 250px;
-    max-width: 350px;
-    border-radius: 12px;
-    background: #fff;
-    font-size: 20px;
-    padding: 40px;
+.register {
+    border-radius: 10px;
+    background-color: rgb(243, 243, 243);
+    box-shadow: 0px 11px 29px 0px rgba(31, 31, 31, 0.25);
+    padding-top: 80px;
+    padding-left: 150px;
+    position: absolute;
+    color: rgb(86, 86, 104);
+    font-size: 36px;
+    line-height: 1.2;
 }
 
-.login-title {
-    font-size: 35px;
-    text-align: center;
-    margin-bottom: 30px;
+.Register__ {
+    font-size: 48px;
+    font-family: "Roboto";
+    color: rgb(86, 86, 104);
+    line-height: 1.2;
+    text-align: left;
+    position: absolute;
+    left: 566.75px;
+    top: 242.732px;
+    z-index: 12;
 }
-
-.login-input {
-    margin: 20px;
-    margin-left: 5px;
-    border-radius: 7px;
-}
-
-.input {
-    border-radius: 7px;
-    border-width: 1px;
-    border-color: #000;
-    height: 30px;
-    width: 100%;
-    font-size: 20px;
-    outline: none;
-}
+  
